# plansys2_data_collector

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: comparison_config.yaml  config.yaml
launch/: expectation_vs_reality_plot.launch.py  generate_csv.launch.py  new_generate_csv.launch.py  plan_comparison.py  plot.launch.py
log/: latest_test
plansys2_data_collector/: action_execution_info_extractor.py  action_executor_info_extractor.py  csv_generator.py  csv_generator_test.py  expectation_vs_reality_plot.py  info_extractor_base.py  plan_execution_info_extractor.py  plan_executor_info_extractor.py  plan_plot_comparison_generator.py  plan_plot_generator.py  plot_generator.py
results/: .~lock.exported_plan_execution_data_collection.csv#  exported_plan_execution_data_collection.csv  risultati.csv
results/OPTIC_old/: exported_plan_execution_data_collection.csv
results/lpg_50/: exported_action_execution_data_collection.csv
results/old/: exported_plan_execution_data_collection.csv  prova.csv
results/popf_50/: exported_action_execution_data_collection.csv  exported_plan_execution_data_collection.csv
results/rosbag2_2024_07_22-10_44_27/: metadata.yaml  rosbag2_2024_07_22-10_44_27_0.db3
results/tamer_50/: exported_action_execution_data_collection.csv  exported_plan_execution_data_collection.csv
results/tamer_50_2/: exported_action_execution_data_collection.csv  exported_plan_execution_data_collection.csv
results/tamer_50_new_observer/: exported_action_execution_data_collection.csv  exported_plan_execution_data_collection.csv
(+19 files in other folders)
